# adq

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/smart_meters/: CMakeLists.txt  DeviceConfig.cpp  DeviceConfig.hpp  SimParameters.hpp  SimProperties.cpp  SimProperties.hpp  SimSmartMeter.cpp  SimSmartMeter.hpp  SimSmartMeterClient.cpp  SimTimesteps.hpp  UtilityServer.cpp  sample-client-config.ini
apps/tests/: CMakeLists.txt  openssl_test.cpp
cmake/: adqConfig.cmake.in
include/adq/config/: Configuration.hpp
include/adq/core/: CrusaderAgreementState.hpp  CryptoLibrary.hpp  DataSource.hpp  FixedPoint_t.hpp  InternalTypes.hpp  MessageConsumer.hpp  NetworkManager.hpp  ProtocolState.hpp  QueryClient.hpp  QueryFunctions.hpp  QueryServer.hpp  TreeAggregationState.hpp
include/adq/core/detail/: CrusaderAgreementState_impl.hpp  CryptoLibrary_impl.hpp  NetworkManager_impl.hpp  ProtocolState_impl.hpp  QueryClient_impl.hpp  QueryServer_impl.hpp  TreeAggregationState_impl.hpp
include/adq/messaging/: AggregationMessage.hpp  AggregationMessageValue.hpp  AgreementValue.hpp  ByteBody.hpp  Message.hpp  MessageBody.hpp  MessageBodyType.hpp  MessageType.hpp  OverlayMessage.hpp  OverlayTransportMessage.hpp  PathOverlayMessage.hpp  PingMessage.hpp  QueryRequest.hpp  SignatureRequest.hpp  SignatureResponse.hpp  SignedValue.hpp  StringBody.hpp  ValueContribution.hpp  ValueTuple.hpp
include/adq/messaging/detail/: AggregationMessage_impl.hpp  AgreementValue_impl.hpp  ByteBody_impl.hpp  MessageBody_impl.hpp  Message_impl.hpp  OverlayMessage_impl.hpp  OverlayTransportMessage_impl.hpp  PathOverlayMessage_impl.hpp  PingMessage_impl.hpp  QueryRequest_impl.hpp  SignatureRequest_impl.hpp  SignatureResponse_impl.hpp  SignedValue_impl.hpp  ValueContribution_impl.hpp
include/adq/mutils-serialization/: Bytes.hpp  SerializationSupport.hpp
include/adq/openssl/: blind_rsa.h  blind_signature.hpp  envelope_encryption.hpp  envelope_key.hpp  openssl_exception.hpp  pointers.hpp  signature.hpp
include/adq/util/: ConfigParser.hpp  FixedPoint.hpp  Hash.hpp  LinuxTimerManager.hpp  OStreams.hpp  Overlay.hpp  PathFinder.hpp  PointerUtil.hpp  PrimeModuli.hpp  Random.hpp  TimerManager.hpp
src/config/: CMakeLists.txt  Configuration.cpp  sample-client-config.ini  sample-server-config.ini
src/core/: CMakeLists.txt  CryptoLibrary.cpp  NetworkManager.cpp
src/messaging/: AggregationMessage.cpp  AgreementValue.cpp  ByteBody.cpp  CMakeLists.txt  Message.cpp  OverlayMessage.cpp  OverlayTransportMessage.cpp  PathOverlayMessage.cpp  PingMessage.cpp  QueryRequest.cpp  SignatureRequest.cpp  SignatureResponse.cpp  SignedValue.cpp  ValueContribution.cpp
src/mutils-serialization/: CMakeLists.txt  SerializationSupport.cpp
src/openssl/: CMakeLists.txt  blind_rsa.c  blind_signature.cpp  envelope_encryption.cpp  envelope_key.cpp  hash.cpp  openssl_exception.cpp  signature.cpp
src/util/: CMakeLists.txt  ConfigParser.cpp  LinuxTimerManager.cpp  Overlay.cpp  PathFinder.cpp  PointerUtil.hpp
